--- a/code/index/freebie.html
+++ b/code/index/freebie.html
@@ -1,21 +1,3 @@
-<!--
-
-=========================================================
-* Gaia Bootstrap Template - v1.0.1
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/gaia-bootstrap-template
-* Licensed under MIT (https://github.com/creativetimofficial/gaia-bootstrap-template/blob/master/LICENSE.md)
-* Copyright 2019 Creative Tim (http://www.creative-tim.com)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Gaia - Bootstrap Template | Free Demo</title>
+    <title>.MineHash</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <link href="assets/css/gaia.css" rel="stylesheet" />
@@ -34,6 +16,8 @@
     <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e5b28b8596.js"></script>
+
 </head>
 
 <body>
@@ -125,28 +109,28 @@
                 <div class="col-md-4">
                     <div class="info-icon">
                         <div class="icon text-danger">
-                            <i class="pe-7s-graph1"></i>
+                            <i class="fas fa-chart-line"></i>
                         </div>
-                        <h3>Sales</h3>
-                        <p class="description">We make our design perfect for you. Our adjustment turn our clothes into your clothes.</p>
+                        <h2>mais rentabilidade para seus negócios</h2>
+                        <p class="description">com nossa monitoração você sabe mais o que acontece com seus negócios,assim podendo saber qual a melhor hora pra retirar ele </p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="info-icon">
                         <div class="icon text-danger">
-                            <i class="pe-7s-note2"></i>
+                            <i class="fas fa-band-aid"></i>
                         </div>
-                        <h3>Content</h3>
-                        <p class="description">We create a persona regarding the multiple wardrobe accessories that we provide..</p>
+                        <h2>Diagnósticos da sua máquina </h2>
+                        <p class="description">Mandamos relatórios de sua máquina para saber melhor o seu uso com ela,deixando você mais informado de suas peças</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="info-icon">
                         <div class="icon text-danger">
-                            <i class="pe-7s-music"></i>
+                            <i class="fas fa-bed"></i>
                         </div>
-                        <h3>Music</h3>
-                        <p class="description">We like to present the world with our work, so we make sure we spread the word regarding our clothes.</p>
+                        <h2>você se preocupa menos</h2>
+                        <p class="description">Com nossa monitoração você pode economizar seus tempo,pois não precisara ficar o tempo todo cuidando de sua mineração.</p>
                     </div>
                 </div>
             </div>
@@ -156,7 +140,7 @@
 
     <div class="section section-our-team-freebie">
         <div class="parallax filter filter-color-black">
-            <div class="image" style="background-image:url('assets/img/header-2.jpeg')">
+            <div class="image" style="background-image:url('assets/img/header-2.jpg')">
             </div>
             <div class="container">
                 <div class="content">
@@ -229,7 +213,7 @@
             <div class="title-area">
                 <h5 class="subtitle text-gray">Here are some</h5>
                 <h2>Clients Testimonials</h2>
-                <div class="separator separator-danger">∎</div>
+                <div class="separator separator-danger">✻</div>
             </div>
 
             <ul class="nav nav-text" role="tablist">
@@ -288,7 +272,7 @@
             <div class="container">
                 <div class="title-area">
                     <h2 class="text-white">Do you want to work with us?</h2>
-                    <div class="separator line-separator">♦</div>
+                    <div class="separator line-separator">✻</div>
                     <p class="description"> We are keen on creating a second skin for anyone with a sense of style! We design our clothes having our customers in mind and we never disappoint!</p>
                 </div>
 
