mudanças site institucional
alterações no css

--- a/code/index/freebie.html
+++ b/code/index/freebie.html
@@ -53,13 +53,13 @@
                         </a>
                         <ul class="dropdown-menu dropdown-danger">
                             <li>
-                                <a href="#"><i class="fa fa-facebook-square"></i> Facebook</a>
+                                <a href="#"><i class="fab fa-facebook-square"></i></i> Facebook</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-twitter"></i> Twitter</a>
+                                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-instagram"></i> Instagram</a>
+                                <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
                             </li>
                         </ul>
                     </li>
@@ -68,7 +68,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+
         </div>
     </nav>
 
