adição dos planos de mensalidade

--- a/code/index/freebie.html
+++ b/code/index/freebie.html
@@ -159,13 +159,13 @@
                                     <div class="col-md-4">
                                         <div class="card card-member">
                                             <div class="content">
-                                                <div class="avatar avatar-danger">
+                                                <!-- <div class="avatar avatar-danger">
                                                     <img alt="..." class="img-circle" src="assets/img/faces/face_1.jpg" />
-                                                </div>
+                                                </div>    -->
                                                 <div class="description">
-                                                    <h3 class="title">Tina</h3>
-                                                    <p class="small-text">CEO / Co-Founder</p>
-                                                    <p class="description">I miss the old Kanye I gotta say at that time I’d like to meet Kanye And I promise the power is in the people and I will use the power given by the people to bring everything I have back to the people.</p>
+                                                    <h3 class="title">Plano 1</h3>
+                                                    <p class="small-text">R$29,90</p>
+                                                    <p class="description">Nesse plano você tem direito a monitoramento de uma máquina</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -173,13 +173,13 @@
                                     <div class="col-md-4">
                                         <div class="card card-member">
                                             <div class="content">
-                                                <div class="avatar avatar-danger">
+                                                <!-- <div class="avatar avatar-danger">
                                                     <img alt="..." class="img-circle" src="assets/img/faces/face_4.jpg" />
-                                                </div>
+                                                </div> -->
                                                 <div class="description">
-                                                    <h3 class="title">Andrew</h3>
-                                                    <p class="small-text">Product Designer</p>
-                                                    <p class="description">I miss the old Kanye I gotta say at that time I’d like to meet Kanye And I promise the power is in the people and I will use the power given by the people to bring everything I have back to the people.</p>
+                                                    <h3 class="title">Plano 2</h3>
+                                                    <p class="small-text">R$59,90</p>
+                                                    <p class="description">fasdkljfak sdfjal skdfsdfaldjflk jadslkfja sldfdfsaj </p>
                                                 </div>
                                             </div>
                                         </div>
@@ -187,13 +187,13 @@
                                     <div class="col-md-4">
                                         <div class="card card-member">
                                             <div class="content">
-                                                <div class="avatar avatar-danger">
+                                                <!-- <div class="avatar avatar-danger">
                                                     <img alt="..." class="img-circle" src="assets/img/faces/face_3.jpg" />
-                                                </div>
+                                                </div> -->
                                                 <div class="description">
-                                                    <h3 class="title">Michelle</h3>
-                                                    <p class="small-text">Marketing Hacker</p>
-                                                    <p class="description">I miss the old Kanye I gotta say at that time I’d like to meet Kanye And I promise the power is in the people and I will use the power given by the people to bring everything I have back to the people.</p>
+                                                    <h3 class="title">Plano 3</h3>
+                                                    <p class="small-text">R$99,90</p>
+                                                    <p class="description"> fjaskdljflas dlkfsa jfalskdf lkfsdj flaksdfj lsk faksldj falksf </p>
                                                 </div>
                                             </div>
                                         </div>
