adição no site(planos e teste gratuito )

--- a/code/index/freebie.html
+++ b/code/index/freebie.html
@@ -16,6 +16,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e5b28b8596.js"></script>
 
 </head>
@@ -140,18 +141,17 @@
 
     <div class="section section-our-team-freebie">
         <div class="parallax filter filter-color-black">
-            <div class="image" style="background-image:url('assets/img/header-2.jpg')">
+            <div class="image" style="background-image:url('assets/img/header-2.gif')">
             </div>
             <div class="container">
                 <div class="content">
                     <div class="row">
                         <div class="title-area">
-                            <h2>Who We Are</h2>
+                            <h2>Conheça nosos planos</h2>
                             <div class="separator separator-danger">✻</div>
-                            <p class="description">We promise you a new look and more importantly, a new attitude. We build that by getting to know you, your needs and creating the best looking clothes.</p>
+                            <p class="description">Temos diversos planos para que você possa se adaptar a algum deles,planos com monitoração de apenas uma máquina ou até mesmoo planos para monitorar suas pools</p>
                         </div>
                     </div>
-
                     <div class="team">
                         <div class="row">
                             <div class="col-md-10 col-md-offset-1">
@@ -159,13 +159,13 @@
                                     <div class="col-md-4">
                                         <div class="card card-member">
                                             <div class="content">
-                                                <!-- <div class="avatar avatar-danger">
-                                                    <img alt="..." class="img-circle" src="assets/img/faces/face_1.jpg" />
-                                                </div>    -->
                                                 <div class="description">
                                                     <h3 class="title">Plano 1</h3>
                                                     <p class="small-text">R$29,90</p>
-                                                    <p class="description">Nesse plano você tem direito a monitoramento de uma máquina</p>
+                                                    <p class="description">-Nesse plano você tem direito a monitoramento de uma máquina <br>- Acesso direto ao nosso suporte via service desk. <br> <br> <br> <br> <br><br><br></p>
+                                                </div>
+                                                <div class="button-get-started">
+                                                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contrate esse plano</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -173,13 +173,13 @@
                                     <div class="col-md-4">
                                         <div class="card card-member">
                                             <div class="content">
-                                                <!-- <div class="avatar avatar-danger">
-                                                    <img alt="..." class="img-circle" src="assets/img/faces/face_4.jpg" />
-                                                </div> -->
                                                 <div class="description">
                                                     <h3 class="title">Plano 2</h3>
                                                     <p class="small-text">R$59,90</p>
-                                                    <p class="description">fasdkljfak sdfjal skdfsdfaldjflk jadslkfja sldfdfsaj </p>
+                                                    <p class="description">-Nesse plano você tem direito a monitoramento de até três máquinas <br>-Você pode entrar em pools diretamentes criadas em nosso site.<br>- Acesso direto ao nosso suporte via service desk. <br><br><br>                                                        <br> </p>
+                                                </div>
+                                                <div class="button-get-started">
+                                                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contrate esse plano</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -187,13 +187,14 @@
                                     <div class="col-md-4">
                                         <div class="card card-member">
                                             <div class="content">
-                                                <!-- <div class="avatar avatar-danger">
-                                                    <img alt="..." class="img-circle" src="assets/img/faces/face_3.jpg" />
-                                                </div> -->
                                                 <div class="description">
                                                     <h3 class="title">Plano 3</h3>
                                                     <p class="small-text">R$99,90</p>
-                                                    <p class="description"> fjaskdljflas dlkfsa jfalskdf lkfsdj flaksdfj lsk faksldj falksf </p>
+                                                    <p class="description">-Nesse plano você tem direito a monitoramento de até três máquinas <br>-Você pode entrar em pools diretamentes criadas em nosso site. <br>-Você tem direito a criar pools diretamente do nosso site e convidar
+                                                        membros do site para te ajudar nela<br>- Acesso direto ao nosso suporte via service desk. </p>
+                                                </div>
+                                                <div class="button-get-started">
+                                                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contrate esse plano</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -267,17 +268,17 @@
 
     <div class="section section-small section-get-started">
         <div class="parallax filter">
-            <div class="image" style="background-image: url('assets/img/office-1.jpeg')">
+            <div class="image" style="background-image: url('assets/img/circuito-1.gif')">
             </div>
             <div class="container">
                 <div class="title-area">
-                    <h2 class="text-white">Do you want to work with us?</h2>
+                    <h2 class="text-white">Teste grátis nossa aplicação</h2>
                     <div class="separator line-separator">✻</div>
-                    <p class="description"> We are keen on creating a second skin for anyone with a sense of style! We design our clothes having our customers in mind and we never disappoint!</p>
+                    <p class="description">Caso você queira apenas testar a nossas aplicação você pode experimentar ela por apeans um mês com a restrição de uma máquina e total suporte de nossa equipe</p>
                 </div>
 
                 <div class="button-get-started">
-                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contact Us</a>
+                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Teste grátis</a>
                 </div>
             </div>
         </div>
