--- a/code/index/freebie.html
+++ b/code/index/freebie.html
@@ -54,7 +54,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-danger">
                             <li>
-                                <a href="#"><i class="fab fa-facebook-square"></i></i> Facebook</a>
+                                <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
@@ -290,22 +290,22 @@
             <div class="row">
                 <div class="col-md-2 col-sm-3">
                     <div class="info">
-                        <h5 class="title">Company</h5>
+                        <h5 class="title">Navegação</h5>
                         <nav>
                             <ul>
                                 <li>
                                     <a href="#">Home</a></li>
                                 <li>
-                                    <a href="#">Find offers</a>
+                                    <a href="#">Por que monitorar</a>
                                 </li>
                                 <li>
-                                    <a href="#">Discover Projects</a>
+                                    <a href="#">Nossos planos</a>
                                 </li>
                                 <li>
-                                    <a href="#">Our Portfolio</a>
+                                    <a href="#">Sobre nós</a>
                                 </li>
                                 <li>
-                                    <a href="#">About Us</a>
+                                    <a href="#">Teste grátis</a>
                                 </li>
                             </ul>
                         </nav>
@@ -357,27 +357,22 @@
                 </div>
                 <div class="col-md-2 col-md-offset-1 col-sm-3">
                     <div class="info">
-                        <h5 class="title">Follow us on</h5>
+                        <h5 class="title">siga-nos</h5>
                         <nav>
                             <ul>
                                 <li>
                                     <a href="#" class="btn btn-social btn-facebook btn-simple">
-                                        <i class="fa fa-facebook-square"></i> Facebook
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="btn btn-social btn-dribbble btn-simple">
-                                        <i class="fa fa-dribbble"></i> Dribbble
+                                        <i class="fab fa-facebook-square"></i></i> Facebook
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="btn btn-social btn-twitter btn-simple">
-                                        <i class="fa fa-twitter"></i> Twitter
+                                        <i class="fab fa-twitter-square"></i> Twitter
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="btn btn-social btn-reddit btn-simple">
-                                        <i class="fa fa-google-plus-square"></i> Google+
+                                    <a href="#" class="btn btn-social btn-twitter btn-simple">
+                                        <i class="fab fa-instagram"></i> Instagram
                                     </a>
                                 </li>
                             </ul>
