--- a/code/index/freebie.html
+++ b/code/index/freebie.html
@@ -264,7 +264,7 @@
                 </div>
                 <div class="tab-pane" id="testimonial2">
                     <p class="description">
-                      Desenvolvedor Front-end/UI Designer
+                      Desenvolvedor Front-end / UI Designer
                     </p>
                 </div>
                 <div class="tab-pane" id="testimonial3">
@@ -274,12 +274,12 @@
                 </div>
                 <div class="tab-pane" id="testimonial4">
                     <p class="description">
-                      Scrum Master
+                      Scrum Master / Product Owner
                     </p>
                 </div>
                 <div class="tab-pane" id="testimonial5">
                     <p class="description">
-                      Desenvolvedor Front-end/UX Designer
+                      Desenvolvedor Fullstack / UX Designer
                     </p>
                 </div>
 
