--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -19,6 +19,7 @@
     <link href="css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e5b28b8596.js"></script>
+    <script src="js/login_funcional.js"></script>
 
 </head>
 
@@ -70,13 +71,13 @@
                     <li>
                         <!-- Botão para acionar modal -->
                         <button type="button" class="btn btn-danger btn-fill" data-toggle="modal"
-                            data-target="#modalLogin">
+                            data-target="#modal_1">
                             Login
                         </button>
 
 
                         <!-- Modal LOGIN -->
-                        <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog"
+                        <div class="modal fade" id="modal_1" tabindex="-1" role="dialog"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
@@ -87,18 +88,18 @@
                                         </h5>
                                     </div>
                                     <div class="modal-body">
-                                        <form class="modal-login">
+                                        <form class="modal-login" id="modal_login">
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1">Email</label><br>
                                                 <input type="email" class="form-control; input-login"
-                                                    id="exampleInputEmail1" aria-describedby="emailHelp"
+                                                    name="login_usuario" id="email" aria-describedby="emailHelp"
                                                     placeholder="Seu email">
                                             </div>
 
                                             <div class="form-group">
                                                 <label for="exampleInputPassword1">Senha</label><br>
                                                 <input type="password" class="form-control; input-login"
-                                                    id="exampleInputPassword1" placeholder="Senha">
+                                                    name="senha_usuario" id="senha" placeholder="Senha">
                                             </div>
 
                                         </form>
@@ -106,7 +107,7 @@
                                     <div class="modal-footer; modal-botao">
                                         <button type="button" class="btn btn-danger btn-fill" data-toggle="modal"
                                             data-target="#modalCadastro">Cadastrar-se</button>
-                                        <button type="button" class="btn btn-danger btn-fill">Login</button><br>
+                                        <button type="button" class="btn btn-danger btn-fill" id="btn_login" onclick="validacao()">Login</button><br>
                                         <button type="button" class="btn btn-secondary"
                                             data-dismiss="modal">Fechar</button>
 
