suporte zendesk na dashboard configurado

--- a/code/dashboard/dashboard.html
+++ b/code/dashboard/dashboard.html
@@ -99,6 +99,12 @@
 
     </section>
   </body>
+
+<!-- Start of minehash Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=1d0f5426-b919-4f53-bb50-07e7c2beb984"> </script>
+<!-- End of minehash Zendesk Widget script -->
+
+
 </html>
 <script type="text/javascript">
   const ctx = document.getElementById('exampleChart').getContext('2d');
