alinhamento dos botões dos card

--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -378,7 +378,7 @@
                                                 <div class="description">
                                                     <h3 class="title">Plano Básico</h3>
                                                     <p class="small-text">R$29,90</p>
-                                                    <p class="description">-Nesse plano você tem direito a monitoramento de uma máquina <br>- Acesso direto ao nosso suporte via service desk. <br> <br> <br> <br> <br><br><br></p>
+                                                    <p class="description">-Nesse plano você tem direito a monitoramento de uma máquina <br>- Acesso direto ao nosso suporte via service desk.<br><br><br><br><br><br><br></p>
                                                 </div>
                                                 <div class="button-get-started">
                                                     <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contratar</a>
@@ -392,10 +392,10 @@
                                                 <div class="description">
                                                     <h3 class="title">Plano Intermediário</h3>
                                                     <p class="small-text">R$59,90</p>
-                                                    <p class="description">-Nesse plano você tem direito a monitoramento de até três máquinas <br>-Você pode entrar em pools diretamente criadas em nosso site.<br>- Acesso direto ao nosso suporte via service desk. <br><br><br>                                                        <br> </p>
+                                                    <p class="description">-Nesse plano você tem direito a monitoramento de até três máquinas <br>-Você pode entrar em pools diretamente criadas em nosso site.<br>- Acesso direto ao nosso suporte via service desk. <br><br><br>                                                        <br> <br> </p>
                                                 </div>
-                                                <div class="button-get-started">
-                                                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contratar</a>
+                                                <div class="button-get-started btn2">
+                                                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg ">Contratar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -407,10 +407,10 @@
                                                     <h3 class="title">Plano BOSS</h3>
                                                     <p class="small-text">R$99,90</p>
                                                     <p class="description">-Você tem direito a monitoramento de até três máquinas <br>-Você pode entrar em pools diretamente criadas em nosso site. <br>-Você tem direito a criar pools diretamente do nosso site e convidar membros
-                                                        do site para te ajudar na gestão<br>- Acesso direto ao nosso suporte via service desk. </p>
+                                                        do site para te ajudar na gestão<br>- Acesso direto ao nosso suporte via service desk. <br></p>
                                                 </div>
-                                                <div class="button-get-started">
-                                                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contratar</a>
+                                                <div class="button-get-started btn2">
+                                                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg btn2">Contratar</a>
                                                 </div>
                                             </div>
                                         </div>
