atualização do ppt da 2° Sprint

--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -297,7 +297,7 @@
                     <div class="title-area">
                         <img alt="..." class="logo" src="img/HASH_LOGO.png" />
                         <h3>Você minera, a gente monitora.</h2>
-                            <div class="separator line-separator">♦</div>
+                            <div class="separator line-separator">✻</div>
                     </div>
                     <div class="button-get-started" data-toggle="modal" data-target="#modalCadastro">
                         <atarget="_blank" class="btn btn-white btn-fill btn-lg ">
