--- a/Site/MeuSite/public/dashboard.html
+++ b/Site/MeuSite/public/dashboard.html
@@ -7,7 +7,9 @@
     <script src="https://kit.fontawesome.com/b40e41c797.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/iziToast.min.css">
     <link rel="stylesheet" href="./css/dashboard.css">
+    <script src="./js/iziToast.min.js" type="text/javascript"></script>
   </head>
   <body>
     <header class="dashboard-header">
@@ -62,6 +64,9 @@
       <!--  -->
       <div class="shadow p-3 mb-5 bg-white rounded container dash-chart">
         <canvas id="exampleChart" width="1000px" height="400px"></canvas>
+        <button type="button" class="btn btn-outline-secondary" onclick="atualizar()">
+          Atualizar
+        </button>
       </div>
 
       <div class="container">
@@ -144,6 +149,17 @@
       options: {
         labels: {
           position: 'bottom'
+        },
+        scales: {
+            xAxes: [{
+                display: true
+            }],
+            yAxes: [{
+                display: true,
+                ticks: {
+                  max: 100
+                }
+            }]
         }
       }
   });
@@ -166,6 +182,55 @@
       endValue.innerHTML += `${Number(Math.random() * (1001 - 850) + 850).toFixed(2)} <strong>GB</strong>`;
     }
 
+  }
+
+  function atualizar() {
+    chart.data.datasets.forEach(dataset => {
+      dataset.data = calc();
+    });
+    chart.update();
+
+    for (let i = 0; i <= 3; i++) {
+      const startValue = document.getElementsByClassName(`detail-value-start`)[i];
+      const endValue = document.getElementsByClassName(`detail-value-end`)[i];
+      const verify = (a, b, x, title, msg) => {
+        if ((b * x) < a) {
+          return iziToast.warning({
+            title: title,
+            message: msg,
+          });
+        }
+      }
+
+      console.log(i);
+
+      if (i == 0) {
+        let cpuS = Number(Math.random() * (59 - 1) + 1).toFixed(2);
+        let cpuE = Number(Math.random() * (101 - 60) + 60).toFixed(2);
+        startValue.innerHTML = `${cpuS}`;
+        endValue.innerHTML = `${cpuE}<strong>%</strong>`;
+        verify(cpuS, cpuE, 0.5, 'CPU', 'Alerta de temperatura alta na CPU!');
+      } else if (i == 1) {
+        let gpuS = Number(Math.random() * (59 - 1) + 1).toFixed(2);
+        let gpuE = Number(Math.random() * (101 - 60) + 60).toFixed(2);
+        startValue.innerHTML = `${gpuS}`;
+        endValue.innerHTML = `${gpuE}<strong>%</strong>`;
+        verify(gpuS, gpuE, 0.5, 'GPU', 'Alerta de temperatura alta na GPU!');
+      } else if (i == 2) {
+        let ramS = Number(Math.random() * (11 - 4) + 4).toFixed(2);
+        let ramE = Number(Math.random() * (17 - 12) + 12).toFixed(2);
+        startValue.innerHTML = `${ramS}`;
+        endValue.innerHTML = `${ramE} <strong>GB</strong>`;
+        verify(ramS, ramE, 0.8, 'RAM', 'Alerta de consumo excessivo de Memória RAM!');
+      } else if (i == 3) {
+        let hddS = Number(Math.random() * (849 - 180) + 180).toFixed(2);
+        let hddE = Number(Math.random() * (1001 - 850) + 850).toFixed(2);
+        startValue.innerHTML = `${hddS}`;
+        endValue.innerHTML = `${hddE} <strong>GB</strong>`;
+        verify(hddS, hddE, 0.8, 'HDD/SSD', 'Há pouco espaco na sua unidade de Armazenamento!');
+      }
+
+    }
   }
 
 </script>
