--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -656,16 +656,27 @@
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
 <script type="text/javascript" src="js/gaia.js"></script>
 
-<!-- <script type="text/javascript" src="js/autenticacao_fb.js"></script> -->
+<script type="text/javascript" src="js/autenticacao_fb.js"></script>
 
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v4.0&appId=1020754554935134&autoLogAppEvents=1"></script>
 
-<script>
+<!-- <script>
     function statusChangeCallback(response) { // Called with the results from FB.getLoginStatus().
         console.log('statusChangeCallback');
         console.log(response); // The current login status of the person.
-        if (response.status === 'connected') { // Logged into your webpage and Facebook.
+        if (response.status === 'connected') {
+            alert('conectado');
+            console.log(response); // Logged into your webpage and Facebook.
+            if(response.name == null){
+            console.log('sem resposta');
+            alert('response.name == null');
+
+        }
+        else{
             testAPI();
+            getUserInfo();
+            entrarDashboard();
+        } // Logged into your webpage and Facebook.
         } else { // Not logged into your webpage or we are unable to tell.
             document.getElementById('status').innerHTML = 'Please log ' +
                 'into this webpage.';
@@ -711,8 +722,9 @@
             console.log('Successful login for: ' + response.name);
             document.getElementById('status').innerHTML =
                 'Thanks for logging in, ' + response.name + '!';
+                sessionStorage.nomeUsuario = response.name;
         });
     }
-</script>
+</script> -->
 
 </html>
