update no rodapé página index.html

--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -636,7 +636,7 @@
                 ©
                 <script>
                     document.write(new Date().getFullYear())
-                </script> MineHash,você minerando,a gente monitorando
+                </script> .MineHash Você minera, a gente monitora
             </div>
         </div>
     </footer>
