acrescentei redes sociais Nosso Time

--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -434,7 +434,29 @@
         </div>
     </div>
 
-
+<!-- Nossa equipe -->
+<!-- Nossa
+<div class="row">
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img class="mx-auto rounded-circle" src="OnePage/img/bianca.jpg" style="height:190px; width:190px" alt="">
+        <h4>Bianca Barranco</h4>
+        <p class="text-muted">Dev Team</p>
+        <ul class="list-inline social-buttons">
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/bianca-barranco-44811b146" target="_blank">
+              <img class="mx-auto rounded-circle" src="OnePage/img/linkedin.png" style="height:30px; width:30px">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/bibarranco" target="_blank">
+              <img class="mx-auto rounded-circle" src="OnePage/img/github.jpg" style="height:30px; width:50px">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    equipe -->
     <div class="section section-our-clients-freebie" id="sobre">
         <div class="container">
             <div class="title-area">
@@ -447,8 +469,21 @@
                 <li class="active">
                     <a href="#testimonial1" role="tab" data-toggle="tab">
                         <div class="image-clients">
-                            <img alt="..." class="img-circle" src="img/faces/fabiyugar.png" />
+                            <img alt="..." class="img-circle" src="img/faces/fabiyugar.png"  />
                         </div>
+                        <p class="text-muted">Dev Team</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com/in/fabicanedo/" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/Fabicaneyu" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/github.jpg" style="height:30px; width:50px">
+                                </a>
+                            </li>
+                        </ul>
                     </a>
                 </li>
                 <li>
@@ -456,6 +491,19 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/gabisutto.png" />
                         </div>
+                        <p class="text-muted">Dev Team</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com/in/gabriel-sutto-a0359817a/" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/sutto243" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/github.jpg" style="height:30px; width:50px">
+                                </a>
+                            </li>
+                        </ul>
                     </a>
                 </li>
                 <li>
@@ -463,6 +511,19 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/leoitalo.png" />
                         </div>
+                        <p class="text-muted">Dev Team</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com/" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/shepard-2209" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/github.jpg" style="height:30px; width:50px">
+                                </a>
+                            </li>
+                        </ul>
                     </a>
                 </li>
                 <li>
@@ -470,6 +531,19 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/nathymedina.png" />
                         </div>
+                        <p class="text-muted">Dev Team</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com/in/nat%C3%A1lia-m-b86a94165/" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/Nathymedina2305" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/github.jpg" style="height:30px; width:50px">
+                                </a>
+                            </li>
+                        </ul>
                     </a>
                 </li>
                 <li>
@@ -477,11 +551,25 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/yulima.png" />
                         </div>
+                        <p class="text-muted">Dev Team</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com/in/yuri-uliam-de-lima-423586184/" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/ArchieSheep" target="_blank">
+                                    <img class="mx-auto rounded-circle" src="img/github.jpg" style="height:30px; width:50px">
+                                </a>
+                            </li>
+                        </ul>
                     </a>
                 </li>
             </ul>
+            
 
-
+            <!-- Cargos   
             <div class="tab-content">
                 <div class="tab-pane active" id="testimonial1">
                     <p class="description">
@@ -510,10 +598,14 @@
                 </div>
 
             </div>
+             -->
 
         </div>
     </div>
 
+<!-- Nossa equipe -->
+
+<!-- Teste Grátis -->
 
     <div class="section section-small section-get-started">
         <div class="parallax filter">
@@ -533,7 +625,7 @@
             </div>
         </div>
     </div>
-
+<!-- Teste Grátis -->
 
     <footer class="footer footer-big footer-color-black" data-color="black">
         <div class="container">
